--- a/emp-frontend/src/components/Homepage/Footer.css
+++ b/emp-frontend/src/components/Homepage/Footer.css
@@ -1,7 +1,8 @@
 .footer {
-  background-color: #f8f8f8;
+  background-color: rgb(148, 7, 148);
   padding: 20px;
   border-top: 1px solid #ddd;
+  width: 100%;
 }
 
 .footer-content {
