--- a/emp-frontend/src/components/Homepage/HomePage.css
+++ b/emp-frontend/src/components/Homepage/HomePage.css
@@ -130,7 +130,7 @@
 }
 
 .quote-image {
-  width: 300px; /* Reduced size */
+  width: 300px; 
   height: 200px;
   object-fit: cover;
   border-radius: 8px;
@@ -201,38 +201,6 @@
   letter-spacing: 3px;
   line-height: 30px;
 }
-
-/* 
-.cta {
-  text-align: center;
-  margin-bottom: 40px;
-}
-
-.cta h2 {
-  font-size: 2em;
-  margin-bottom: 20px;
-}
-
-.cta p {
-  font-size: 1.2em;
-  color: #555;
-  margin-bottom: 20px;
-}
-
-.cta-button {
-  padding: 10px 20px;
-  font-size: 1.2em;
-  color: #fff;
-  background-color: #007bff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.cta-button:hover {
-  background-color: #0056b3;
-} */
 
 .contact-info {
   text-align: center;
