--- a/emp-frontend/src/components/Homepage/Footer.css
+++ b/emp-frontend/src/components/Homepage/Footer.css
@@ -30,7 +30,7 @@
   margin-bottom: 5px;
 }
 
-.footer-column ul li a {
+.footer-column ul li a, h3, p {
   text-decoration: none;
   color: #ffffff;
 }
@@ -56,7 +56,4 @@
 .footer-bottom {
   text-align: center;
   margin-top: 20px;
-}
-h3 , a , p{
-   color: white;
 }
