added mangage students and manage teachers module

--- a/emp-frontend/src/components/Homepage/HomePage.css
+++ b/emp-frontend/src/components/Homepage/HomePage.css
@@ -105,6 +105,9 @@
   padding: 20px;
   gap: 20px;
   text-align: center;
+  p{
+    color: black;
+  }
 }
 /* @keyframes slide {
   0% {
@@ -174,7 +177,10 @@
 
 .testimonial p {
   font-size: 1.1em;
-  color: #555;
+  color: black;
+}
+p{
+  color: black;
 }
 
 .testimonial span {
