--- a/emp-frontend/src/App.css
+++ b/emp-frontend/src/App.css
@@ -1,12 +1,6 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -27,7 +21,9 @@
 .App-link {
   color: #61dafb;
 }
-
+p{
+  color: black;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +32,4 @@
     transform: rotate(360deg);
   }
 }
+
