--- a/emp-frontend/src/components/Homepage/HomePage.css
+++ b/emp-frontend/src/components/Homepage/HomePage.css
@@ -279,6 +279,15 @@ p{
 
 
 /* Features Role Based */
+.portalsection{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  h1{
+    font-size: 2em;
+  }
+}
 .portals-section {
   display: flex;
   flex-direction: row;
@@ -287,39 +296,49 @@ p{
 }
 
 .portals-menu {
-  width: 30%;
+  width: 50%;
   display: flex;
   flex-direction: column;
 }
 
 .portal-item {
+  display: flex;
+  flex-direction: column;
   background-color: #f5f5f5;
   padding: 15px;
   margin-bottom: 10px;
   border-radius: 8px;
+  height: 40px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: all 0.3s ease;
+  justify-content: center;
+  align-items: center;
+  font-size: larger;
+  font-weight: 600;
 }
 
 .portal-item.active {
   background-color: #d1e7ff;
+  height: 100px;
 }
 
 .portal-description {
   margin-top: 10px;
+  font-weight: 400;
 }
 
 .portal-details {
-  width: 65%;
+  width: 45%;
+  height: fit-content;
   background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
   text-align: center;
 }
 
 .portal-details img {
   max-width: 100%;
-  height: auto;
-  margin-bottom: 20px;
+  height: 60%;
+  
 }
