--- a/emp-frontend/src/components/chatbot/Chatbot.css
+++ b/emp-frontend/src/components/chatbot/Chatbot.css
@@ -1,17 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-body {
-  font-family: 'Arial', sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background: #e0e7ff;
-}
+
 
 .chatbot-container {
   display: flex;
@@ -24,7 +12,7 @@ body {
 }
 
 .chatbox {
-  width: 400px;
+  width: 100%;
   max-width: 100%;
   background: #ffffff;
   border-radius: 10px;
